feat: cargo-make argument forwarding

--- a/.github/workflows/github-dependency-review.yaml
+++ b/.github/workflows/github-dependency-review.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Dependency Review
         uses: actions/dependency-review-action@v3
         with:
-          allow-licenses: MIT, Apache-2.0
+          allow-licenses: MIT, Apache-2.0, ISC, Unicode-DFS-2016
           comment-summary-in-pr: on-failure
           # Explicit refs required for merge_group and push triggers:
           # https://github.com/actions/dependency-review-action/issues/456
