--- a/crates/sample-kmdf-driver/Cargo.toml
+++ b/crates/sample-kmdf-driver/Cargo.toml
@@ -12,6 +12,8 @@ publish = false
 
 [lib]
 crate-type = ["cdylib"]
+# Tests from root driver crates must be excluded since there's no way to prevent linker args from being passed to their unit tests: https://github.com/rust-lang/cargo/issues/12663
+test = false
 
 [dependencies]
 wdk.workspace = true
