--- a/crates/sample-kmdf-driver/Cargo.toml
+++ b/crates/sample-kmdf-driver/Cargo.toml
@@ -10,6 +10,8 @@ keywords = ["windows", "driver", "sample", "example", "wdf"]
 categories = ["hardware-support"]
 publish = false
 
+[package.metadata.wdk]
+
 [lib]
 crate-type = ["cdylib"]
 # Tests from root driver crates must be excluded since there's no way to prevent linker args from being passed to their unit tests: https://github.com/rust-lang/cargo/issues/12663
