--- a/.github/workflows/github-dependency-review.yaml
+++ b/.github/workflows/github-dependency-review.yaml
@@ -21,6 +21,8 @@ jobs:
         with:
           # AND combinations are currently bugged and must be listed separately: https://github.com/actions/dependency-review-action/issues/263
           allow-licenses: MIT, Apache-2.0, ISC, Unicode-DFS-2016, (MIT OR Apache-2.0) AND Unicode-DFS-2016
+          # antstyle is licensed as (MIT OR Apache-2.0), but the Github api fails to detect it: https://github.com/rust-cli/anstyle/tree/main/crates/anstyle
+          allow-dependencies-licenses: 'pkg:cargo/antstyle@1.0.4'
           comment-summary-in-pr: on-failure
           # Explicit refs required for merge_group and push triggers:
           # https://github.com/actions/dependency-review-action/issues/456
