Fix wdk sys ci tests (#23)
* refactor: add lint exceptions for clippy::manual_c_str_literals and clippy::ref_as_ptr (#108)

* re-enable wdk-sys tests

* fix!: prevent linking of wdk-libraries in tests

BREAKING CHANGES: wdk_build::Config::configure_binary_build now returns a wdk_build::ConfigError instead of ().

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -55,10 +55,9 @@ jobs:
         with:
           tool: cargo-expand
 
-      # FIXME: wdk-sys layout tests fail, but only on github hosted runner
       - name: Run Cargo Test
-        run: cargo +${{ matrix.rust_toolchain }} test --locked --profile ${{ matrix.cargo_profile }} --target ${{ matrix.target_triple }} --workspace --exclude wdk-sys
+        run: cargo +${{ matrix.rust_toolchain }} test --locked --profile ${{ matrix.cargo_profile }} --target ${{ matrix.target_triple }}
 
       - name: Run Cargo Test (--features nightly)
         if: matrix.rust_toolchain == 'nightly'
-        run: cargo +${{ matrix.rust_toolchain }} test --locked --profile ${{ matrix.cargo_profile }} --target ${{ matrix.target_triple }} --workspace --exclude wdk-sys --features nightly
+        run: cargo +${{ matrix.rust_toolchain }} test --locked --profile ${{ matrix.cargo_profile }} --target ${{ matrix.target_triple }} --features nightly
