Fix fork main (#25)
* refactor: add lint exceptions for clippy::manual_c_str_literals and clippy::ref_as_ptr (#108)

* ci: fix various pipeline breakages (nightly rustfmt bug, new nightly clippy lints, upstream winget dependency issue) (#117)

* docs: fix `winget` llvm install command option (#115)

Signed-off-by: Nicholas Rishel <rishel.nick@gmail.com>
Co-authored-by: Melvin Wang <melvin.mc.wang@gmail.com>

* fix!: prevent linking of wdk libraries in tests that depend on `wdk-sys` (#118)

* refactor: change version bounds for `manual_c_str_literals` and `ref_as_ptr` clippy lints (#127)

Signed-off-by: Melvin Wang <melvin.mc.wang@gmail.com>

* Revert "Fix wdk sys ci tests (#23)"

This reverts commit 165f26abb36d6dde160465ef2c7576127f0760dc.

---------

Signed-off-by: Nicholas Rishel <rishel.nick@gmail.com>
Signed-off-by: Melvin Wang <melvin.mc.wang@gmail.com>
Co-authored-by: Nicholas Rishel <rishel.nick@gmail.com>

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -42,6 +42,9 @@ success = rm -r ${CARGO_MAKE_CRATE_CUSTOM_TRIPLE_TARGET_DIRECTORY}/tests
 assert ${success} "Failed to delete tests directory"
 '''
 
+[tasks.test]
+install_crate = { crate_name = "cargo-expand", version = "1.0.80" }
+
 [tasks.audit]
 args = ["audit", "--deny", "warnings"]
 
