--- a/.github/workflows/code-formatting-check.yaml
+++ b/.github/workflows/code-formatting-check.yaml
@@ -17,12 +17,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust Toolchain (Nightly)
-        uses: dtolnay/rust-toolchain@nightly
+        # Need to temporarily pin nightly used for fmt because of upstream bug: https://github.com/rust-lang/rustfmt/issues/6082, https://github.com/rust-lang/rustfmt/issues/6099
+        uses: dtolnay/rust-toolchain@master
         with: 
+          toolchain: nightly-2024-02-17
           components: rustfmt
 
       - name: Run Cargo Format
-        run: cargo +nightly fmt --all -- --check
+        run: cargo +nightly-2024-02-17 fmt --all -- --check
 
   taplo-fmt:
     name: .toml Formatting Check
