--- a/.github/workflows/github-dependency-review.yaml
+++ b/.github/workflows/github-dependency-review.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           # AND combinations are currently bugged and must be listed separately: https://github.com/actions/dependency-review-action/issues/263
           # OR combinations are currently bugged and must be listed separately: https://github.com/actions/dependency-review-action/issues/670
-          allow-licenses: MIT, Apache-2.0, BSD-3-Clause, ISC, Unicode-DFS-2016, (MIT OR Apache-2.0) AND Unicode-DFS-2016, Unlicense OR MIT
+          allow-licenses: MIT, Apache-2.0, BSD-3-Clause, ISC, Unicode-DFS-2016
           # anstyle is licensed as (MIT OR Apache-2.0), but the Github api fails to detect it: https://github.com/rust-cli/anstyle/tree/main/crates/anstyle
           allow-dependencies-licenses: 'pkg:cargo/anstyle@1.0.4'
           comment-summary-in-pr: on-failure
