--- a/.github/workflows/hyperv-tests.yaml
+++ b/.github/workflows/hyperv-tests.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: TODO
-        pwsh: |
+        run: |
           Get-VMSwitch * | Format-Table Name
 
 
