--- a/.github/workflows/hyperv-tests.yaml
+++ b/.github/workflows/hyperv-tests.yaml
@@ -14,30 +14,72 @@ jobs:
   build:
     name: Build
     runs-on: windows-latest
-    # strategy:
-    #   matrix:
-    #     wdk:
-    #       - Microsoft.WindowsWDK.10.0.22621 # NI WDK
+    strategy:
+      matrix:
+        wdk:
+          - Microsoft.WindowsWDK.10.0.22621 # NI WDK
 
-    #     llvm:
-    #       - 17.0.6
+        llvm:
+          - 17.0.6
 
-    #     rust_toolchain:
-    #       - stable
+        rust_toolchain:
+          - stable
     #       - beta
     #       - nightly
 
-    #     cargo_profile:
-    #       - dev
+        cargo_profile:
+          - dev
     #       - release
 
-    #     target_triple:
-    #       - x86_64-pc-windows-msvc
+        target_triple:
+          - x86_64-pc-windows-msvc
     #       - aarch64-pc-windows-msvc
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
+      - name: Install Winget
+        uses: ./.github/actions/winget-install
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install LLVM ${{ matrix.llvm }}
+        run: |
+          if ((Get-WinGetPackage -Id LLVM -Source winget -MatchOption Equals).InstalledVersion -eq '${{ matrix.llvm }}') {
+            Write-Host "LLVM ${{ matrix.llvm }} is already installed."
+          } else {
+            Write-Host "Installing LLVM ${{ matrix.llvm }}..."
+            Install-WinGetPackage -Id LLVM.LLVM -Version ${{ matrix.llvm }} -Source winget -MatchOption Equals -Mode Silent -Force
+          }
+          clang --version
+
+      - name: Install WDK (${{ matrix.wdk }})
+        run: |
+          if ((Get-WinGetPackage -Id ${{ matrix.wdk }} -Source winget -MatchOption Equals).Id -eq '${{ matrix.wdk }}') {
+            Write-Host "${{ matrix.wdk }} is already installed. Attempting to update..."
+            Update-WinGetPackage -Id ${{ matrix.wdk }} -Source winget -MatchOption Equals -Mode Silent -Force
+          } else {
+            Write-Host "Installing ${{ matrix.wdk }}..."
+            Install-WinGetPackage -Id ${{ matrix.wdk }} -Source winget -MatchOption Equals -Mode Silent -Force
+          }
+
+      - name: Install Rust Toolchain (${{ matrix.rust_toolchain }})
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ matrix.rust_toolchain }}
+          targets: ${{ matrix.target_triple }}
+
+      - name: Run Cargo Build
+        run: cargo +${{ matrix.rust_toolchain }} build --locked --profile ${{ matrix.cargo_profile }} --target ${{ matrix.target_triple }} --workspace
+
+      - name: Install Cargo Make
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-make
+
+      - name: Run Cargo Make (package-driver-flow) in Workspace
+        run: cargo make package-driver-flow +${{ matrix.rust_toolchain }} --locked --profile ${{ matrix.cargo_profile }} --target ${{ matrix.target_triple }} --workspace
 
       # - name: TODO
       #   run: |
@@ -46,7 +88,7 @@ jobs:
       #     Get-VMSwitch
       #     $vm_switch = $(Get-VMSwitch)[0]
           
-      #     New-VM -Name $vm_name -Switch $vm_switch -Generation 2
+      #     New-VM -Name $vm_name -Switch $vm_switch.name -Generation 2
       #     Start-VM -Name $vm_name
 
       - name: Setup tmate session
