--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,12 +38,14 @@ wdk-sys = { path = "crates/wdk-sys", version = "0.3.0" }
 # External Crates
 anyhow = "1.0.95"
 bindgen = "0.69.5"
-camino = "1.1.9"
 cargo_metadata = "0.18.1"
 cc = "1.2.10"
 cfg-if = "1.0.0"
 clap = "4.5.9"
 clap-cargo = "0.14.1"
+console = "0.15.10"
+git2 = "0.20.0"
+ignore = "0.4.23"
 itertools = "0.13.0"
 paste = "1.0.15"
 pretty_assertions = "1.4.1"
@@ -52,7 +54,9 @@ quote = "1.0.38"
 rustversion = "1.0.19"
 serde = "1.0"
 serde_json = "1.0"
+similar = "2.7.0"
 syn = "2.0.87"
+tempfile = "3.16.0"
 thiserror = "1.0.69"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
