implement more options

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,9 +41,10 @@ bindgen = "0.69.5"
 cargo_metadata = "0.18.1"
 cc = "1.2.10"
 cfg-if = "1.0.0"
-clap = "4.5.9"
-clap-cargo = "0.14.1"
-console = "0.15.10"
+clap = "4.5.30"
+clap-cargo = "0.15.2"
+clap-verbosity-flag = "3.0.2"
+colorchoice-clap = "1.0.6"
 git2 = "0.20.0"
 ignore = "0.4.23"
 itertools = "0.13.0"
