--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,8 +45,10 @@ clap = "4.5.30"
 clap-cargo = "0.15.2"
 clap-verbosity-flag = "3.0.2"
 colorchoice-clap = "1.0.6"
+console = "0.15.10"           # todo: remove
 git2 = "0.20.0"
 ignore = "0.4.23"
+indicatif = "0.17.11"
 itertools = "0.13.0"
 paste = "1.0.15"
 pretty_assertions = "1.4.1"
@@ -60,6 +62,7 @@ syn = "2.0.87"
 tempfile = "3.16.0"
 thiserror = "1.0.69"
 tracing = "0.1.40"
+tracing-indicatif = "0.3.9"
 tracing-subscriber = "0.3.18"
 windows = "0.58.0"
 
