--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -14,6 +14,7 @@ updates:
     labels:
       - "type:dependabot"
       - "type:dependencies-cargo"
+    open-pull-requests-limit: 100
 
   - package-ecosystem: "github-actions"
     directory: "/"
