fix: update Windows runner version in GitHub Actions and remove obsolete test flag in Cargo.toml

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ name: Test
 jobs:
   test:
     name: Test
-    runs-on: windows-latest
+    runs-on: windows-2025
     strategy:
       matrix:
         wdk:
